Site atualizado sendo enviado

--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
                 Habilidades / Skills
             </a> 
         </nav>
+        <img src="./assets/FOTONOVA.jpg" alt="foro icone pequeno" class="cabecalho__menu__foto">
     </header>
 
     <main class="apresentacao">
@@ -37,14 +38,12 @@
             <p class ="apresentacao__conteudo__texto ">
                 Currently working as a computer intern at the Farias Brito University Center, where I am responsible for hardware support and maintenance and organization of the university's laboratories and computers. I am passionate about technology and learning. Determination. Human relationship. Commitment. Focus on results. Adaptation to changes and assertive communication are the softskills that identify me the most. I have skills in the Office Package and high level of Portuguese grammar as well as advanced English.
             </p>
-            <img src="./assets/FOTOPERFIL.jpg" class="imagemPerfil" alt="Foto perfil">
+            <img src="./assets/FOTONOVA.jpg" class="imagemPerfil" alt="Foto perfil">
         </section>
-        <img src="">
     </main>
-
     <footer class="rodape">
         <p>
-            Desenvolvido por Osiris
+            Desenvolvido por Osiris &copy; 2023.
         </p>
     </footer>
 </body>
