--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </a>  
         
         </nav>
+        <img src="./assets/FOTONOVA.jpg" alt="foto icone pequeno" class="cabecalho__menu__foto">
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
@@ -37,12 +38,16 @@
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes: </h2>
                     <a class="apresentacao__links__link" href="https://Github.com/osirissn" target="_blank">
-                    <img src="./assets/github.png" class="imgLink" alt="logotipo github">
+                <img src="./assets/github.png" class="imgLink" alt="logotipo github">
                     Github 
                     </a>       
-                    <a class="apresentacao__links__link" href="https://instagram.com/osiriss.n" target="_blank">
-                    <img src="./assets/VDC.png" class="imgLink" alt="logotipo insta">
+                <a class="apresentacao__links__link" href="https://instagram.com/osiriss.n" target="_blank">
+                <img src="./assets/VDC.png" class="imgLink" alt="logotipo insta">
                     Instagram
+                </a>                
+                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/osiris-de-castro-7984aa21b/" target="_blank">
+                    <img src="./assets/linkedinIcone.png" class="imgLink" alt="logotipo linkedin">
+                    Linkedin
                     </a>                
             </div>
         </section>
@@ -50,7 +55,7 @@
     </main>
     <footer class="rodape">
         <p>
-            Desenvolvido por Osiris &copy; 2023
+            Desenvolvido por Osiris &copy; 2023.
         </p>
     </footer>
 </body>
