--- a/index.html
+++ b/index.html
@@ -25,16 +25,15 @@
                 href="Skills.html">
                 Habilidades / Skills
             </a>  
-        
         </nav>
         <img src="./assets/FOTONOVA.jpg" alt="foto icone pequeno" class="cabecalho__menu__foto">
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class ="apresentacao__conteudo__titulo"> Bem-vindo ao meu site de apresentação
-            <strong class="titulo-destaque"> aqui você seá capaz de me conhecer e saber das minhas especialidades :)
+            <strong class="titulo-destaque"> aqui você será capaz de me conhecer e saber das minhas especialidades :)
             </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Osiris, desenvolvi esse site com o objetivo de me apresentar. Sou um estudante de 21 anos do terceiro semestre do curso de Análise e Desenvolvimento de Sistemas no Centro Universitário Farias Brito. Atualmente, tenho a oportunidade de colaborar como estagiário de informática na própria faculdade. Acredito que a aprendizagem contínua é essencial para acompanhar as demandas do mundo da tecnologia, portanto, por meio desta landing page, vos apresento minhas hard e soft skills, as quais você pode conferir no menu acima(Habilidades).Estou ansioso para contribuir e crescer profissionalmente, explorando novas oportunidades e ampliando meu conhecimento.</p>
+            <p class="apresentacao__conteudo__texto">Olá! Meu nome é Osiris, desenvolvi esse site com o objetivo de me apresentar. Acredito que a aprendizagem contínua é essencial para acompanhar as demandas do mundo da tecnologia, portanto, por meio desta landing page, você poderá, clicando no menu acima, em "Sobre mim", me conhecer melhor, e em "Habilidades", ficar por dentro das minhas especialidades , conhecendo um pouco da minha área de estudo. Estou empolgado para contribuir e crescer profissionalmente, explorando novas oportunidades e ampliando meu conhecimento.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes: </h2>
                     <a class="apresentacao__links__link" href="https://Github.com/osirissn" target="_blank">
