enviando atualizacao numero 2 do portfolio 'responsividade'

--- a/Skills.html
+++ b/Skills.html
@@ -72,15 +72,16 @@
                 </dl>
          
             </section>
-        <div class="apresentacao__icones__skills">
-            <img src="./assets/MYSQLICONE.png" alt="logo MySQL" class ="icones__individuais">
-            <img src="./assets/PythonIcone.png" alt="logo python"class ="icones__individuais">
-            <img src="./assets/iconeJava.png" alt="logo java"class ="icones__individuais">
-            <img src="./assets/iconeHTML.png" alt="logo html"class ="icones__individuais">
-            <img src="./assets/CSSicone.png" alt="logo css"class ="icones__individuais">
-            <img src="./assets/github.png" alt="logo github"class ="icones__individuais">
-            <img src="./assets/SQLserverIcone.png" alt="logo sql server"class ="icones__individuais">
-         </div>
+             <!--
+            <div class="apresentacao__icones__skills">
+                <img src="./assets/MYSQLICONE.png" alt="logo MySQL" class ="icones__individuais">
+                <img src="./assets/PythonIcone.png" alt="logo python"class ="icones__individuais">
+                <img src="./assets/iconeJava.png" alt="logo java"class ="icones__individuais">
+                <img src="./assets/iconeHTML.png" alt="logo html"class ="icones__individuais">
+                <img src="./assets/CSSicone.png" alt="logo css"class ="icones__individuais">
+                <img src="./assets/github.png" alt="logo github"class ="icones__individuais">
+                <img src="./assets/SQLserverIcone.png" alt="logo sql server"class ="icones__individuais">
+             </div> -->
     </main>
     <footer class="rodape">
         <p>
