atualizacao de responsividade

--- a/Skills.html
+++ b/Skills.html
@@ -20,11 +20,11 @@
             </a>
             <a class="cabecalho__menu__link"
                 href="about.html">
-                Sobre mim / About me
+                Sobre mim
             </a>  
             <a class="cabecalho__menu__link"
                 href="Skills.html">
-                Habilidades / Skills
+                Habilidades
             </a>  
         </nav>
         <img src="./assets/FOTONOVA.jpg" alt="foro icone pequeno" class="cabecalho__menu__foto">
@@ -32,7 +32,7 @@
     </header>
     <main class="apresentacao__skills">
             <section class="apresentacao__conteudo__skills">
-                    <h1 class ="apresentacao__conteudo__titulo">Curso: Banco de Dados SQL do Zero ao Avançado + Projetos Reais 2023 <a href="https://www.udemy.com/course/curso-sql-do-zero-ao-avancado/" target="_blank"><img src="./assets/udemyIcone.png" class="iconesSkills" alt="icone udemy"></a></h1>
+                    <h1 class ="apresentacao__conteudo__titulo">Curso: Banco de dados SQL do zero ao avançado + projetos reais 2023 <a href="https://www.udemy.com/course/curso-sql-do-zero-ao-avancado/" target="_blank"><img src="./assets/udemyIcone.png" class="iconesSkills" alt="icone udemy"></a></h1>
                 
                 <dl>
                     <h1 class ="apresentacao__conteudo__titulo">Formação SQL Server 2022 <a href="https://cursos.alura.com.br/formacao-microsoft-sql-server-2022" target="_blank"><img src="./assets/aluraicone.jpg" class="iconesSkills" alt="fotoAlura"></a> </h1>
@@ -72,16 +72,6 @@
                 </dl>
          
             </section>
-             <!--
-            <div class="apresentacao__icones__skills">
-                <img src="./assets/MYSQLICONE.png" alt="logo MySQL" class ="icones__individuais">
-                <img src="./assets/PythonIcone.png" alt="logo python"class ="icones__individuais">
-                <img src="./assets/iconeJava.png" alt="logo java"class ="icones__individuais">
-                <img src="./assets/iconeHTML.png" alt="logo html"class ="icones__individuais">
-                <img src="./assets/CSSicone.png" alt="logo css"class ="icones__individuais">
-                <img src="./assets/github.png" alt="logo github"class ="icones__individuais">
-                <img src="./assets/SQLserverIcone.png" alt="logo sql server"class ="icones__individuais">
-             </div> -->
     </main>
     <footer class="rodape">
         <p>
