--- a/about.html
+++ b/about.html
@@ -19,11 +19,11 @@
             </a>
             <a class="cabecalho__menu__link"
                 href="about.html">
-                Sobre mim / About me
+                Sobre mim
             </a>
             <a class="cabecalho__menu__link"
                 href="Skills.html">
-                Habilidades / Skills
+                Habilidades
             </a> 
         </nav>
         <img src="./assets/FOTONOVA.jpg" alt="foro icone pequeno" class="cabecalho__menu__foto">
@@ -36,7 +36,7 @@
                 Sou um estudante de 21 anos do terceiro semestre do curso de Análise e Desenvolvimento de Sistemas no Centro Universitário Farias Brito. Atualmente, tenho a oportunidade de colaborar como estagiário de informática na própria universidade, onde sou responsável pelo suporte hardware e manutenção e organização dos laboratórios e computadores. Sou apaixonado por tecnologia e aprendizado. Determinação.Relacionamento humano. Comprometimento. Foco em resultados. Adaptação a mudanças e comunicação assertiva são as softskills que tenho como ponto forte. Tenho habilidade no Pacote Office e elevado nível de português gramatical assim como inglês Avançado.
             </p>
             <p class ="apresentacao__conteudo__texto ">
-                I'm a 21-year-old student in the third semester of the Systems Analysis and Development course at Farias Brito University Center. Currently, I have the opportunity to collaborate as a computer intern at the university, where I am responsible for hardware support and maintenance and organization of laboratories and computers. I am passionate about technology and learning. Determination. Human relationship. Commitment. Focus on results. Adaptation to changes and assertive communication are softskills that I have as a strong point. I have skills in the Office Package and level of Portuguese grammar as well as advanced English.
+                I'm a 21-year-old student in the third semester of the Systems Analysis and Development course at Farias Brito University Center. Currently, I have the opportunity to collaborate as a computer intern at the university, where I am responsible for hardware support and maintenance and organization of laboratories and computers. I am passionate about technology and learning. Determination. Human relationship. Commitment. Focus on results. Adaptation to changes and assertive communication are the softskills that I have as a strong point. I have skills in the Office Package and a high level of grammatical Portuguese as well as advanced English.
             </p>
             <img src="./assets/FOTONOVA.jpg" class="imagemPerfil" alt="Foto perfil">
         </section>
