--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             </a>
             <a class="cabecalho__menu__link"
                 href="about.html">
-                Sobre mim / About me
+                Sobre mim
             </a>  
             <a class="cabecalho__menu__link"
                 href="Skills.html">
-                Habilidades / Skills
+                Habilidades
             </a>  
         </nav>
         <img src="./assets/FOTONOVA.jpg" alt="foto icone pequeno" class="cabecalho__menu__foto">
@@ -47,10 +47,11 @@
                 <a class="apresentacao__links__link" href="https://www.linkedin.com/in/osiris-de-castro-7984aa21b/" target="_blank">
                     <img src="./assets/linkedinIcone.png" class="imgLink" alt="logotipo linkedin">
                     Linkedin
-                    </a>
+                    </a>                
             </div>
         </section>
         <img src="./assets/fotoportfolio.png" class = "imagem" alt="Dev programando">
+        
     </main>
     <footer class="rodape">
         <p>
