--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                     </a>                
             </div>
         </section>
-        <img src="./assets/fotoportfolio.png" class = "imagem" alt="Dev programando">
+        <img src="./assets/FotoHomeCode.jpg" class = "imagem" alt="Dev program">
         
     </main>
     <footer class="rodape">
         <p>
-            Desenvolvido por Osiris &copy; 2023.
+            Desenvolvido por Osiris &copy; 2023;
         </p>
     </footer>
 </body>
