--- a/Skills.html
+++ b/Skills.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" 
     content="IE=edge">
     <meta name="viewport" content="width=device-width,
      initial-scale=1.0">
-    <title>Osiris/Skills</title>
+    <title>Osiris/Habilidades</title>
     <link rel="stylesheet" href="./styles/estilo.css">
     <link rel="shotcut icon" href="./assets/1291756_computer_designer_imac_monitor_icon.png" type="image/x-icon">
 </head>
