--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </main>
     <footer class="rodape">
         <p>
-            Desenvolvido por Osiris &copy; 2023;
+            - Desenvolvido por Osiris &copy; 2023.
         </p>
     </footer>
 </body>
