--- a/Skills.html
+++ b/Skills.html
@@ -75,7 +75,7 @@
     </main>
     <footer class="rodape">
         <p>
-            Desenvolvido por Osiris &copy; 2023.
+            - Desenvolvido por Osiris &copy; 2023.
         </p>
     </footer>
 </body>
